--- a/src/book-now/google-map/google-map.scss
+++ b/src/book-now/google-map/google-map.scss
@@ -1,5 +1,6 @@
 .google-map-wrapper {
-  width: 25vw;
+  width: 350px;
+  max-width: 90%;
   height: 20vw;
   margin: auto 0px;
   .google-map {
