--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -29,7 +29,6 @@ button {
   font: inherit;
   cursor: pointer;
   outline: inherit;
-  max-width: inherit;
   transition: all 0.25s ease-in-out;
   &:hover {
     background-color: #990000;
